# hyprviz

./: .SRCINFO  .gitignore  .typos.toml  Cargo.toml  PKGBUILD  flake.nix  hyprviz.desktop  readme.md  result
.github/workflows/: publish-aur.yml  rust.yml  typos.yml
assets/: hyprviz.desktop
guides/: Dwindle-Layout.md  Envs.md  Layer-Rules.md  Master-Layout.md  Monitors.md
guides/en/: Binds.md  Envs.md  Execs.md  Gestures.md  Layer-Rules.md  Master-Layout.md  Monocle-Layout.md  Scrolling-Layout.md  Window-Rules.md  Workspace-Rules.md
guides/ru/: Animations.md  Binds.md  Dispatchers.md  Dwindle-Layout.md  Environment-variables.md  Envs.md  Execs.md  Gestures.md  Layer-Rules.md  Master-Layout.md  Monitors.md  Monocle-Layout.md  Permissions.md  Scrolling-Layout.md  Window-Rules.md  Workspace-Rules.md
guides/zh-CN/: Animations.md  Binds.md  Dispatchers.md  Dwindle-Layout.md  Environment-variables.md  Envs.md  Execs.md  Gestures.md  Layer-Rules.md  Master-Layout.md  Monitors.md  Monocle-Layout.md  Permissions.md  Scrolling-Layout.md  Window-Rules.md  Workspace-Rules.md
locales/: advanced_editors.yml  gtk_converters.yml  gui.yml  guides.yml  main.yml  system_info.yml  utils.yml  widget.yml
locales/hyprland/: above_lock.yml  angle.yaml  animation_name.yml  animation_style.yml  bind_flags_enum.yml  bind_right.yml  border_color.yml  change_group_active.yml  content_type.yml  css_gaps.yml  cursor_corner.yml  cursor_zoom.yml  cycle_next.yml  direction.yml  dispatcher.yml  dispatcher_fullscreen_state.yml  dispatcher_fullscreen_state_action.yml  exec_with_rules.yml  float_value.yml  font_weight.yml  fullscreen_action.yml  fullscreen_mode.yml  fullscreen_state.yml  gesture.yml  gesture_action.yml  gesture_direction.yml  gesture_floating.yml  gesture_fullscreen.yml  group_lock_action.yml  hypr_color.yml  hypr_coord.yml  hypr_expression.yml  hypr_gradient.yml  hypr_opacity.yml  hypr_permission.yml  hypr_size.yml  hypr_variable.yml  id_or_name.yml  id_or_name_or_workspace_selector.yml  idle_ingibit_mode.yml  (+47 more)
src/: advanced_editors.rs  gtk_converters.rs  gui.rs  guides.rs  hyprland.rs  main.rs  system_info.rs  utils.rs  widget.rs
src/hyprland/: above_lock.rs  angle.rs  animation.rs  animation_name.rs  animation_style.rs  bezier_curve.rs  bind_flags.rs  bind_flags_enum.rs  bind_left.rs  bind_right.rs  border_color.rs  change_group_active.rs  cm.rs  content_type.rs  content_type_int.rs  css_gaps.rs  cursor_corner.rs  cursor_zoom.rs  cycle_next.rs  direction.rs  dispatcher.rs  dispatcher_fullscreen_state.rs  dispatcher_fullscreen_state_action.rs  exec_with_rules.rs  float_value.rs  font_weight.rs  fullscreen_action.rs  fullscreen_mode.rs  fullscreen_state.rs  gesture.rs  gesture_action.rs  gesture_direction.rs  gesture_floating.rs  gesture_fullscreen.rs  group_lock_action.rs  hypr_color.rs  hypr_coord.rs  hypr_expression.rs  hypr_gradient.rs  hypr_layout.rs  (+64 more)
