[package]
name = "hyprviz"
version = "0.3.3"
authors = ["timasoft <tima.klester@yandex.ru>", "Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland!"
repository = "https://github.com/timasoft/hypviz.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2024"

[dependencies]
gio = "0.21.0"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_14"] }
hyprparser = "0.1.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[package.metadata.aur]
depends = [
    "gtk4",
    "glib2",
    "desktop-file-utils",
    "hyprland"
]

files = [
    ["hyprviz.desktop", "/usr/share/applications/hyprviz.desktop"],
    ["LICENSE", "/usr/share/licenses/$pkgname/LICENSE"]
]
