[package]
name = "hyprviz"
version = "0.7.1"
authors = ["timasoft <tima.klester@yandex.ru>", "Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland!"
repository = "https://github.com/timasoft/hyprviz"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2024"

[dependencies]
gio = "0.21.5"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_14"] }
hyprparser = "0.1.6"
inventory = "0.3.21"
libc = "0.2"
minreq = { version = "2.14.1", features = ["https"] }
rust-i18n = "3.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3

[package.metadata.aur]
depends = [
    "gtk4",
    "glib2",
    "desktop-file-utils",
    "hyprland"
]

files = [
    ["hyprviz.desktop", "/usr/share/applications/hyprviz.desktop"]
]
