[package]
name = "hyprviz"
version = "0.9.0"
authors = ["timasoft <tima.klester@yandex.ru>", "Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland!"
repository = "https://github.com/timasoft/hyprviz"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2024"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
gio = "0.22.6"
gtk = { version = "0.11.0", package = "gtk4", features = ["v4_14"] }
hyprparser = "0.1.6"
inventory = "0.3.24"
libc = "0.2"
minreq = { version = "2.14.1", features = ["https"] }
rust-i18n = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3

[package.metadata.aur]
depends = [
    "gtk4",
    "glib2",
    "desktop-file-utils",
    "hyprland"
]

files = [
    ["assets/hyprviz.desktop", "/usr/share/applications/hyprviz.desktop"],
    ["assets/hyprviz.svg", "/usr/share/icons/hicolor/scalable/apps/hyprviz.svg"],
    ["assets/hyprviz.png", "/usr/share/icons/hicolor/512x512/apps/hyprviz.png"]
]
